--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Buzzword Bingo</title>
-  <script type="text/javascript" src="Main.js"></script>
-  <link rel="stylesheet" href="app.css">
+  <script type="text/javascript" src="site.js"></script>
+  <link rel="stylesheet" href="site.css">
 </head>
 
 <body>
