--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Buzzword Bingo</title>
-  <script type="text/javascript" src="site.js"></script>
+  <script type="text/javascript" src="main.js"></script>
   <link rel="stylesheet" href="site.css">
 </head>
 
